--- a/assets/autolink.css
+++ b/assets/autolink.css
@@ -1,7 +1,13 @@
 /* CSS file for Autolink extension */
 
+/* CSS file for Autolink extension */
+
 .autolink {
-  font-size: 12px; font-family: 'Cousine', font-weight: 400; color: #363636; margin: 0px, 0 px, 5 px, 0px; padding: 0px;
+  font-size: 12px; font-family: 'Cousine'; font-weight: 400; color: #363636; margin: 0px, 0 px, 5 px, 0px; padding: 0px;
+}
+
+.autolink div {
+  width: 360px;
 }
 
 .autolink ul {
@@ -13,7 +19,7 @@
 }
 
 .autolink-title {
-	font-size: 12px; font-family: 'Cousine', font-weight: 400; color: #363636; margin: 0px, 0 px, 5 px, 0px; padding: 0px;
+	font-size: 12px; font-family: 'Cousine'; font-weight: 400; color: #363636; margin: 0px, 0 px, 5 px, 0px; padding: 0px;
 }
 
 .autolink-desc {
@@ -23,4 +29,9 @@
 .autolink-date {
 	font-size: 0.8em;
 	font-style: italic;
+}
+
+.autolink-top {
+	border-top: 10px #880E4F;
+	border-bottom:5px grove #605050;
 }
