--- a/assets/autolink.twig
+++ b/assets/autolink.twig
@@ -1,7 +1,9 @@
+{{ autolink([cse ID], record.title) }} 
 {% for raknare in 0..9 %}
-{% if autolinkitem(record.title, 'exist', raknare) == true %}
-    <div class="autolink"><div class="autolink-top"></div></div><h3><a href="{{ autolinkitem(record.title, 'id', raknare) }}"{{ autolinkitem(record.title, 'title', raknare) }}</h3><img src="{{ paths.theme }}images/logo.png" alt="Blomma" width="320px" height="auto" style="background: #060606; border:none; margin-top: 5px; "/>
-  <p>Av {{ autolinkitem(record.title, 'author', raknare) }}</p>
-  <p>{{ autolinkitem(record.title, 'summary', raknare) }}</p>
+{% if autolinkitem(record.title, 'id', raknare) != '' %}
+   <div class="autolink"><h4 class="autolink-title"><a href="{{ autolinkitem(record.title, 'id', raknare) }}" target="blank">{{ autolinkitem(record.title, 'title', raknare) }}</a></h3>
+   <a href="{{ autolinkitem(record.title, 'id', raknare) }}"><img src="{{ autolinkitem(record.title, 'tumnagel', raknare) }}" alt="tumnagel" height="auto" width="280"></a>
+   <p class="autolink-author">Av {{ autolinkitem(record.title, 'author', raknare) }}</p>
+   <p class="autolink-summary">{{ autolinkitem(record.title, 'summary', raknare) }} ...</p></div>  
 {% endif %}
 {% endfor %}
